<resources>
    <string name="app_name">iRULU</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="version_name">1.3.1</string>
    <string name="versionv">Version 1.3.1</string>
    <string name="api_version">v1.0</string>
    <string name="no_network">Please check your internet connection.</string>
    <string name="server_network_failed">Failed to connect to server, please try later.</string>
    <string name="please_wait">Waiting...</string>
    <string name="facebook_app_id">376713215858387</string>
    <string name="google_tracker_id">UA-46006501-1</string>
    <string name="maybe_you_like_height">125</string>
    <string name="product_detail_title">Item</string>
    <string name="tv_unload">Sign in</string>
    <string name="complete">complete</string>
    <string name="homepage_phone">Phone</string>
    <string name="homepage_tablet">Tablet</string>
    <string name="homepage_smart_device">Smart Device</string>
    <string name="homepage_accessory">Accessory</string>
    <string name="buy_now">Buy Now</string>
    <string name="select">Select</string>
    <string name="add_on_gift">[Add-on gift]</string>
    <string name="select_size_color">Size/Color</string>
    <string name="add_to_wish_list">Add to Wish List</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="but_now">Buy Now</string>
    <string name="description">Item Description</string>
    <string name="contact_seller">Contact seller</string>
    <string name="customer_reviews">Customer Reviews (%s)</string>
    <string name="reviews_empty">There isn\'t any review yet!</string>
    <string name="num_ratings">(%s ratings)</string>
    <string name="write_review">Write a review</string>
    <string name="customer_also_like">You might also like</string>
    <string name="more">More</string>
    <string name="delete">Delete</string>
    <string name="no_reviews">No reviews</string>
    <string name="to_submit_review">To submit a review</string>
    <string name="need_irulu_account">You need to use an iRULU account that has successfully been charged for a purchase.</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="please_choose_size_color">Please choose size/color.</string>
    <string name="share_to">Share To</string>
    <string name="facebook_share">Facebook</string>
    <string name="twitter_share">Twitter</string>
    <string name="in_stock">In Stock</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="wish_list">Wish List</string>
    <string name="wish_empty_tip">Tap the \'heart icon\' at the lower right corner below the item picture to add item to wish list.</string>
    <string name="wish_empty_title">You currently have no item in the wish list</string>
    <string name="wish_delete">DELETE</string>
    <string name="people_are_searching">People are searching</string>
    <string name="log_in_first">Please log in first</string>
    <string name="sold_out">This product has been sold out</string>
    <string name="removed">Removed</string>
    <string name="photo_album">photos</string>
    <string name="photo_m">camera</string>
    <string name="choose_an_pic">Choose an pic</string>
    <string name="select_photo">Select photo</string>
    <string name="choose_a_default_review">Choose a default review</string>
    <string name="irulu_respective">iRULU Respective: </string>
    <string name="the_selected">selected</string>
    <string name="choose_photos">select pics</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search iRULU</string>
    <string name="hot_search">Hot Searches</string>
    <string name="recent_search">Recent Searches</string>
    <string name="searchresult_order">Most Popular</string>
    <string name="searchresult_price">Price</string>
    <string name="searchresult_match">Best Match</string>
    <string name="search_tip">Sorry, cannot find related products.</string>
    <string name="no_data">Sorry! There\'s no relevant content.</string>
    <string name="search_hint">Please enter some keywords for searching.</string>
    <string name="search_empty_tip">Please check your spelling or try more general search terms</string>
    <string name="search_empty_title">your search returned no results</string>
    <string name="qty">Qty</string>
    <string name="save">Save</string>
    <string name="item_total">Item Total :</string>
    <string name="total">Total:</string>
    <string name="place_order">Place Order</string>
    <string name="pay_now">Pay Now</string>
    <string name="shipping">Shipping :</string>
    <string name="promotional_savings">Promotional Savings :</string>
    <string name="no_item_in_list">There are no items in this list.</string>
    <string name="add_to_shop">Add things to shop for later</string>
    <string name="quantities_no_zero">Item quantities can\'t be 0.</string>
    <string name="sold_out_title">Sorry,the follow items have been sold out.Please remove them from your list.</string>
    <string name="no_enough">The quantity of some item in your cart has exceeded our stock, please edit your cart.</string>
    <string name="my_orders">My Orders</string>
    <string name="order_total">Order Total :</string>
    <string name="average_ratting">Ratings</string>
    <string name="all_orders">All Orders</string>
    <string name="unpaid">Unpaid</string>
    <string name="shipped">Shipped</string>
    <string name="all">All</string>
    <string name="order_placed">Order Placed: </string>
    <string name="write_a_review">Write a Review</string>
    <string name="confirm_goods">Confirm</string>
    <string name="sure_confirm_goods">Confirm Goods</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="sure_cancel_order">Cancel Order</string>
    <string name="delete_order">Delete Order</string>
    <string name="sure_delete_order">Delete Order</string>
    <string name="tracking">Tracking</string>
    <string name="order_id">Order # :</string>
    <string name="order_date">Order date :</string>
    <string name="ship_to">Ship to</string>
    <string name="status">Status :</string>
    <string name="products">Products</string>
    <string name="promotional_codes">Promotional codes:</string>
    <string name="order_details">Order Details</string>
    <string name="no_item_in_order">You currently have no order or transaction.</string>
    <string name="purchase_title">Purchase on iRULU</string>
    <string name="tracking_empty">Currently there\'s no shipping information</string>
    <string name="shipment_restricted">Sorry,the follow items can`t be shipped to your selected address.Due to Shipment Resctriced.Please remove item or change your address.</string>
    <string name="tracking_information">Tracking Information</string>
    <string name="view_all">View all</string>
    <string name="hidden">Hidden</string>
    <string name="refund_order">Refund</string>
    <string name="refund_return">Refund/Return</string>
    <string name="refund_details">Refund Details</string>
    <string name="ups">UPS</string>
    <string name="tracking_id">Tracking ID :</string>
    <string name="tracking_details">Tracking Details</string>
    <string name="irulu_support">IRULU Support</string>
    <string name="order_message">Order Message</string>
    <string name="disount_message">Discount Message</string>
    <string name="message_empty_text">You currently have no message in the box.</string>
    <string name="sign">Sign In</string>
    <string name="email_address">Your email address</string>
    <string name="firstname">First name</string>
    <string name="empty_firstname">First name can\'t be blank.</string>
    <string name="empty_lastname">Last name can\'t be blank.</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="empty_password">Password can\'t be blank.</string>
    <string name="empty_nickName">nickName can\'t be blank.</string>
    <string name="password_not_same">Passwords entered are not consistent.</string>
    <string name="password_wrong">Wrong password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="creat_an_account">Creat an account</string>
    <string name="creat_account">Create Account</string>
    <string name="regist_succed">Sign up successfully</string>
    <string name="go_back">Go back</string>
    <string name="register">Go to Register</string>
    <string name="failed_sign_in">Failed to sign in</string>
    <string name="failed_sign_in_text">The current email address is not registered.</string>
    <string name="succed">success</string>
    <string name="reset_password_succed">Password is changed</string>
    <string name="sign_your_email_address">Sign up with your email address</string>
    <string name="your_email_address">Your email address</string>
    <string name="password_least">Password (at least 6 characters)</string>
    <string name="enter_again">Enter again</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="about_irulu">About iRULU</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="submit">Submit</string>
    <string name="return_home">Return Home</string>
    <string name="empty_feedback">Please enter Feedback.</string>
    <string name="empty_issue">Please enter issue.</string>
    <string name="your_feedback">Give Us Feedback</string>
    <string name="or_exit_edit">Are you sure to discard unsaved changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="feedback_hint">Please enter your comment in here. Your feedback will help us providing a better experience for you</string>
    <string name="send">Send</string>
    <string name="no_cache">no cache</string>
    <string name="failed">Download Failed !</string>
    <string name="sign_out_succed">sign out succeed</string>
    <string name="sign_out">Sign Out</string>
    <string name="check_update">Check for Update</string>
    <string name="wipe_cache">Wipe Cache</string>
    <string name="setting">Setting</string>
    <string name="add_new_address">Add New Address</string>
    <string name="profile">Profile</string>
    <string name="head_ortrait">Avatar</string>
    <string name="nickname">Nickname</string>
    <string name="birthday">Birthday</string>
    <string name="e_mail">E-mail</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="street_address1">Please enter street address1.</string>
    <string name="empty_email_prompt">Please enter email address</string>
    <string name="email_style_wrong">Please enter correct email address</string>
    <string name="unregist">The email address hasn\'t been registered.</string>
    <string name="city">Please enter city.</string>
    <string name="state">Please enter state/province/county.</string>
    <string name="phone_number">Please enter phone number.</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_mimimum_length">Password must be 6 characters at least.</string>
    <string name="enter_confirm_password">Please enter confirm password.</string>
    <string name="enter_current_password">Please enter current password.</string>
    <string name="enter_new_password">Please enter new password.</string>
    <string name="new__as_old_passwrod">Your new password can\'t be the same as old one.</string>
    <string name="confirm_password_mimimun_length">Confirm password must be 6 characters at least.</string>
</resources>