<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_simple_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="7dp"
        android:textSize="@dimen/setting_text_size"
        android:text="@string/reset_password" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_top_options_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/email_icon" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="#4fa6ff" />

        <EditText
            android:id="@+id/forgot_password_email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/your_email_address"
            android:maxLength="40"
            android:singleLine="true"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />
    </LinearLayout>
    <Button
        android:id="@+id/forgot_password_send_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/change_password_height"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="@dimen/user_forgot_password_height"
        android:background="@drawable/button_02_selector"
        android:text="@string/send_email"
        android:textAllCaps="false"
        android:textSize="@dimen/setting_text_size"
        android:textColor="@android:color/white" />
</LinearLayout>