<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/change_password_layout"
        layout="@layout/common_simple_title" />

    <View
        android:id="@+id/horizontal_line"
        android:layout_below="@id/change_password_layout"
        style="@style/HorizontalLineGray5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horizontal_line"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/change_password_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#666666"
            android:textSize="@dimen/setting_text_size"
            android:text="Login Email:" />

        <EditText
            android:id="@+id/change_password_current_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_below="@id/change_password_email_tv"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_edittext"
            android:gravity="center_vertical"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="#666666"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />

        <EditText
            android:id="@+id/change_password_new_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_below="@id/change_password_current_password"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:textColor="#666666"
            android:background="@drawable/icon_edittext"
            android:gravity="center_vertical"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="10dp"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />

        <EditText
            android:id="@+id/change_password_enter_again"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_below="@id/change_password_new_password"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_edittext"
            android:gravity="center_vertical"
            android:hint="@string/enter_again"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textColor="#666666"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />

    </RelativeLayout>

    <Button
        android:id="@+id/change_password_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/change_password_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="@dimen/btn_right_left"
        android:layout_marginRight="@dimen/btn_right_left"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_02_selector"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textSize="@dimen/setting_text_size"
        android:textColor="@android:color/white" />


</RelativeLayout>