<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/common_simple_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="7dp"
        android:text="@string/sign_your_email_address"
        android:textColor="#666666"
        android:textSize="@dimen/setting_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/common_top_options_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/login_name_icon" />

            <View
                android:layout_width="1px"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="#4fa6ff" />

            <EditText
                android:id="@+id/account_firstname_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/change_password_height"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/firstname"
                android:maxLength="14"
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bbbbbb"
                android:textSize="@dimen/setting_right_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:background="@drawable/common_top_options_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/account_lastname_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/change_password_height"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/lastname"
                android:maxLength="14"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#666666"
                android:textColorHint="#bbbbbb"
                android:textSize="@dimen/setting_right_text_size" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_top_options_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/email_icon" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="#4fa6ff" />

        <EditText
            android:id="@+id/account_email_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/your_email_address"
            android:maxLength="40"
            android:singleLine="true"
            android:textColor="#666666"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_top_options_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/password_icon" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="#4fa6ff" />

        <EditText
            android:id="@+id/account_password_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/password_least"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#666666"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/common_top_options_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/password_icon" />

        <View
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="#4fa6ff" />

        <EditText
            android:id="@+id/account_repassword_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/change_password_height"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_again"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#666666"
            android:textColorHint="#bbbbbb"
            android:textSize="@dimen/setting_right_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/account_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/change_password_height"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_02_selector"
        android:text="@string/creat_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/setting_text_size" />

</LinearLayout>